--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-transkript_log.txt
+.venv/
 venv/
+.env
+# Other existing .gitignore content if any, but based on the initial file list, it's likely empty or minimal.
+# Assuming it's empty or I should just add these.
